Fixed ready button ui error of it being too low on mobile

--- a/frontend/src/scss/_btn.scss
+++ b/frontend/src/scss/_btn.scss
@@ -47,3 +47,7 @@
   opacity: .2;
   pointer-events: none;
 }
+
+#ready-btn {
+  margin-bottom: 7vh;
+}
